--- a/assets/base.css
+++ b/assets/base.css
@@ -3,5 +3,6 @@
 
   --shadow-smallest: 0 0px 12px -6px rgba(0, 24, 40, 0.3);
   --shadow-small: 0 0px 15px -6px rgba(0, 24, 40, 0.4);
+  --shadow-medium: 0 8px 30px rgba(0, 0, 0, 0.12);
   --shadow-large: 0 30px 60px rgba(0, 0, 0, 0.12);
 }
