Optimize lighthouse stats

--- a/assets/base.css
+++ b/assets/base.css
@@ -1,8 +1,8 @@
 :root {
   --color-link: hsla(222, 8%, 95%, 0.45);
 
-  --shadow-smallest: 0 0px 12px -6px rgba(0, 24, 40, 0.3);
-  --shadow-small: 0 0px 15px -6px rgba(0, 24, 40, 0.4);
-  --shadow-medium: 0 8px 30px rgba(0, 0, 0, 0.12);
-  --shadow-large: 0 30px 60px rgba(0, 0, 0, 0.12);
+  --shadow-smallest: 0 0px 12px -6px hsla(204, 100%, 8%, 0.30);
+  --shadow-small: 0 0px 15px -6px hsla(204, 100%, 8%, 0.40);
+  --shadow-medium: 0 8px 30px hsla(0, 0%, 0%, 0.12);
+  --shadow-large: 0 30px 60px hsla(0, 0%, 0%, 0.12);
 }
